--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,10 @@
 
     <properties>
         <java.version>17</java.version>
+        <start-class>de.dredlich.psm.api.datenschubser.PsmApiToSqliteApplication</start-class>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
